[package]
name = "tlrc"
version = "1.11.1"
description = "Official tldr client written in Rust"
categories = ["command-line-utilities"]
keywords = ["tldr"]
repository = "https://github.com/tldr-pages/tlrc"
documentation = "https://tldr.sh/tlrc"
license = "MIT"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "tldr"
path = "src/main.rs"

[features]
default = ["socks-proxy"]
socks-proxy = ["ureq/socks-proxy"]

[dependencies]
clap = { version = "4.5.38", features = ["derive", "wrap_help"] }
dirs = "6.0.0"
log = "0.4.27"
once_cell = "1.21.3"
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
terminal_size = "0.4.2"
toml = "0.8.22"
unicode-width = { version = "0.2.0", default-features = false }
ureq = { version = "3.0.11", default-features = false, features = ["rustls", "platform-verifier"] }
yansi = "1.0.1"
zip = { version = "4.0.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.20.0"

[lints.clippy]
all = "warn"
pedantic = "warn"
style = "warn"
module_name_repetitions = { level = "allow", priority = 1 }
struct_excessive_bools = { level = "allow", priority = 1 }
unnecessary_debug_formatting = { level = "allow", priority = 1 }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3
