[package]
name = "tlrc"
version = "1.12.0"
description = "Official tldr client written in Rust"
authors = ["Lena Pastwa"]
categories = ["command-line-utilities"]
keywords = ["tldr"]
repository = "https://github.com/tldr-pages/tlrc"
documentation = "https://tldr.sh/tlrc"
license = "MIT"
edition = "2021"
rust-version = "1.83"

[[bin]]
name = "tldr"
path = "src/main.rs"

[features]
default = ["socks-proxy"]
socks-proxy = ["ureq/socks-proxy"]

[dependencies]
clap = { version = "4.5.51", features = ["derive", "wrap_help"] }
dirs = "6.0.0"
log = "0.4.27"
once_cell = "1.21.3"
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
terminal_size = "0.4.3"
toml = "0.9.8"
unicode-width = { version = "0.2.2", default-features = false }
ureq = { version = "3.1.0", default-features = false, features = ["rustls", "platform-verifier"] }
yansi = "1.0.1"
zip = { version = "6.0.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[dev-dependencies]
assert_cmd = "2.1.1"
tempfile = "3.21.0"

[lints.clippy]
all = "warn"
pedantic = "warn"
style = "warn"
module_name_repetitions = { level = "allow", priority = 1 }
struct_excessive_bools = { level = "allow", priority = 1 }
unnecessary_debug_formatting = { level = "allow", priority = 1 }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3

[package.metadata.deb]
section = "utils"
priority = "optional"
conflicts = ["tldr", "tldr-py"]
extended-description = ""
assets = [
	["target/release/tldr", "usr/bin/", "755"],
	["tldr.1", "usr/share/man/man1/", "644"],
	["completions/tldr.bash", "usr/share/bash-completion/completions/tldr", "644"],
	["completions/_tldr", "usr/share/zsh/vendor-completions/", "644"],
	["completions/tldr.fish", "usr/share/fish/vendor_completions.d/", "644"],
	["LICENSE", "usr/share/licenses/tlrc", "644"]
]
