[package]
name = "tlrc"
version = "1.13.0"
description = "Official tldr client written in Rust"
authors = ["Lena Pastwa <lena@lnps.me>"]
categories = ["command-line-utilities"]
keywords = ["tldr"]
repository = "https://github.com/tldr-pages/tlrc"
documentation = "https://tldr.sh/tlrc"
license = "MIT"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "tldr"
path = "src/main.rs"

[features]
default = ["socks-proxy"]
socks-proxy = ["ureq/socks-proxy"]

[dependencies]
clap = { version = "4.6.0", features = ["derive", "wrap_help"] }
dirs = "6.0.0"
log = "0.4.29"
once_cell = "1.21.3"
ring = "0.17.14"
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
serde = { version = "1.0.219", features = ["derive"] }
terminal_size = "0.4.4"
toml = "1.1.2"
unicode-width = { version = "0.2.2", default-features = false }
ureq = { version = "3.3.0", default-features = false, features = ["rustls-no-provider", "platform-verifier"] }
yansi = "1.0.1"
zip = { version = "8.5.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[dev-dependencies]
assert_cmd = "2.2.0"
tempfile = "3.27.0"

[lints.clippy]
all = "warn"
pedantic = "warn"
style = "warn"
module_name_repetitions = { level = "allow", priority = 1 }
struct_excessive_bools = { level = "allow", priority = 1 }
unnecessary_debug_formatting = { level = "allow", priority = 1 }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3

[package.metadata.deb]
section = "utils"
priority = "optional"
extended-description = ""
assets = [
	["target/release/tldr", "usr/bin/", "755"],
	["tldr.1", "usr/share/man/man1/", "644"],
	["completions/tldr.bash", "usr/share/bash-completion/completions/tldr", "644"],
	["completions/_tldr", "usr/share/zsh/vendor-completions/", "644"],
	["completions/tldr.fish", "usr/share/fish/vendor_completions.d/", "644"],
	["LICENSE", "usr/share/licenses/tlrc", "644"]
]
